Fixing the footer form privacy policy spacing

--- a/web/app/themes/envisioningjustice/assets/styles/components/_forms.scss
+++ b/web/app/themes/envisioningjustice/assets/styles/components/_forms.scss
@@ -380,9 +380,9 @@ form {
   .BBFormSectionHeading {
     display: none;
   }
-  // Privacy Policy
-  #bboxsignup-4e50e96a-c095-4be1-8020-9b621d7ec110_divPrivacyPolicy {
-    margin-top: 10px;
+  // Submit Button
+  .BBFormButtonRow {
+    margin-bottom: 10px;
   }
 }
 
